--- a/index.xhtml
+++ b/index.xhtml
@@ -1,9 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-<title>Teste</title>
+<title>Cursos da Alura</title>
 </head>
 <body>
-Testando!
+<ul>
+    <li>Vagrant</li>
+    <li>Docker</li>
+    <li>Ansible</li>
+    <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+</ul>
 </body>
 </html>
